--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,11 +1,20 @@
 
     /* большие экраны свыше 1200px, планшеты (768 - 922 px) и смартфоны (320px - 480px) */
+@media all and (min-width: 1025px) and (max-width: 1116px) {
+    .menu_list {
+        margin: 32px 0;
+    }
+    .menu_list li a {
+        position: relative;
+        padding: 0 5px 0 5px;
+    }
+}
 
     /*======== menu_list ===========*/
     @media all and (max-width: 1024px) {
         .menu_list {
             display: none;
-            top: 100px;
+            top: 97px;
             margin: 0 auto;
             float: left;
             background-color: white;
@@ -33,7 +42,7 @@
             /*border: red solid 1px;*/
             display: none;
             position: absolute;
-            top: 100px;
+            top: 97px;
             left: 137px;
             float: left;
             width: auto;
@@ -53,7 +62,7 @@
         .menu-about {
             display: none;
             background-color: white;
-            top: 100px;
+            top: 97px;
             left: 211px;
             margin: 0 auto;
             float: left;
