--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,14 +1,14 @@
 
     /* большие экраны свыше 1200px, планшеты (768 - 922 px) и смартфоны (320px - 480px) */
-@media all and (min-width: 1025px) and (max-width: 1116px) {
-    .menu_list {
-        margin: 32px 0;
+    @media all and (min-width: 1025px) and (max-width: 1116px) {
+        .menu_list {
+            margin: 32px 0;
+        }
+        .menu_list li a {
+            position: relative;
+            padding: 0 5px 0 5px;
+        }
     }
-    .menu_list li a {
-        position: relative;
-        padding: 0 5px 0 5px;
-    }
-}
 
     /*======== menu_list ===========*/
     @media all and (max-width: 1024px) {
@@ -84,11 +84,61 @@
     }
 
 
-
+    @media all and (max-width: 320px) {
+    .block-literature {
+        float: none;
+        width: 100%;
+    }
+}
 
         /*======= article ============*/
 
     @media all and (max-width:767px) {
+        .background_books {
+            margin-top: 55px;
+            height: auto;
+        }
+        .discount {
+            width: 100%;
+            text-align: center;
+            margin: 0 auto;
+            padding: 50px 0 100px 0;
+            background-color: white;
+            position: static;
+        }
+        .img-literature img {
+            width: 95%;
+        }
+        .block-literature {
+            float: none;
+            width: 95%;
+        }
+        .popwrites {
+            margin: 115px 0 0 0;
+            width: 100%;
+        }
+        .book-item {
+            /*padding: 0;*/
+            margin: 0 auto;
+            width: 80%;
+            float: none;
+            text-align: left;
+            display: block;
+
+        }
+        .literature_writes {
+            padding: 45px 0 20px 0;
+            width: 100%;
+        }
+        .bookslide {
+            display: none;
+        }
+        .book-title {
+            text-align: left;
+        }
+        .book-title a {
+            text-align: left;
+        }
         .container_wrap {
            display: none;
         }
@@ -160,11 +210,20 @@
             width: 100%;
             padding: 35px 1px 10px 1px;
         }
+        .shopfrontmenuright {
+            float: left;
+        }
         .block_news {
-            padding: 0 50px 0 0;
+            width: 100%;
+            padding: 0 1px 30px 0;
             float: none;
         }
+        .discount_procent {
+            padding: 10px 20px 75px 20px;
+            width: 70%;
+        }
         .container_button {
+            padding-top: 50px;
             margin: 0 auto;
             text-align: center;
         }
@@ -177,12 +236,11 @@
         .partners {
             float: none;
             width: 100%;
-            margin: 0 auto;
-            margin-bottom: 100px;
+            margin: 50px auto;
         }
         .partners_block li {
             text-align: center;
-            width: 38%;
+            width: 100%;
             margin: 0 15px;
             display: inline-block;
         }
@@ -215,8 +273,8 @@
             float: none;
         }
         .section_photo_autor img {
-            width: 85%;
-            height: auto;
+            width: 85% !important;
+            height: auto !important;
         }
         .section_photo_autor {
 
@@ -241,7 +299,7 @@
         .books {
             margin: 0 auto;
             float: none;
-            width: 66%;
+            width: 100%;
             /* min-width: 650px; */
         }
         .count-form-inner {
@@ -462,6 +520,9 @@
 
     }
     @media all and (min-width: 768px) and (max-width:991px) {
+        .container_wrap {
+            display: none;
+        }
         .container-sm {
             width: 89%;
             margin: 0 auto;
