--- a/css/style.css
+++ b/css/style.css
@@ -3416,7 +3416,7 @@ article-block .article-block-text {
     outline: none;
     width: 31px;
     height: 22px;
-    display: flex;
+    /*display: flex;*/
     position: relative;
     background: none;
     border: none;
