--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,14 +13,14 @@
     /*======== menu_list ===========*/
     @media all and (max-width: 1024px) {
         .menu_list {
-            display: none;
-            top: 97px;
+            display: block;
+            top: 0;
             margin: 0 auto;
             float: left;
             background-color: white;
             padding: 10px 10px 5px 0;
             /*border: 1px solid red;*/
-            position: absolute;
+            position: relative;
 
         }
         .navigation {
@@ -40,10 +40,10 @@
         }
         .info_boks {
             /*border: red solid 1px;*/
-            display: none;
-            position: absolute;
-            top: 97px;
-            left: 137px;
+            display: block;
+            position: relative;
+            top: 0;
+            /*left: 137px;*/
             float: left;
             width: auto;
             background-color: white;
@@ -60,15 +60,15 @@
             margin-top: 0;
         }
         .menu-about {
-            display: none;
+            display: block;
             background-color: white;
-            top: 97px;
-            left: 211px;
+            top: 0;
+            /*left: 211px;*/
             margin: 0 auto;
             float: left;
             padding: 52px 25px 47px 0;
             /* border: 1px solid red; */
-            position: absolute;
+            position: relative;
             font-family: 'Lato', sans-serif;
             font-size: 14px;
             font-weight: bold;
@@ -80,6 +80,23 @@
         #inner-userpic img {
             display: block;
             margin-top: 15px;
+        }
+        /*#menu-all {*/
+            /*display: none;*/
+        /*}*/
+
+        #menu-all {
+            position: absolute;
+            top: 98px;
+            left: 0px;
+            overflow: hidden;
+            width: 0px;
+            transition: 0.5s;
+            height: 231px;
+        }
+        #menu-all.active {
+            width:300px;
+            transition: 0.6s;
         }
     }
 
