--- a/css/responsive.css
+++ b/css/responsive.css
@@ -111,6 +111,36 @@
         /*======= article ============*/
 
     @media all and (max-width:767px) {
+        .leftpart {
+            float: none;
+            width: 100%;
+        }
+        .rightpart {
+            margin-top: 59px;
+            float: none;
+            width: 100%;
+        }
+        .shipping_right {
+            text-align: right;
+            width: 100%;
+            float: none;
+            margin-bottom: 40px;
+        }
+        .payment {
+            width: 100%;
+            margin: 0;
+            /* margin-top: 25px; */
+        }
+        .input-text-inner {
+            max-width: 240px;
+        }
+        .input-text-inner textarea[placeholder] {
+            max-width: 240px;
+        }
+        .coupon-form {
+            width: 100%;
+            float: none;
+        }
         .background_books {
             margin-top: 55px;
             height: auto;
@@ -536,6 +566,10 @@
 
     }
     @media all and (min-width: 768px) and (max-width:991px) {
+        .coupon-form {
+            width: 100%;
+            float: none;
+        }
         .container_wrap {
             display: none;
         }
@@ -683,18 +717,43 @@
             margin: 0 auto;
         }
         .proceed-wrap {
-            margin: 0 auto;
+            margin-top: 150px;
+            /*margin: 0 auto;*/
             float: none;
+            width: 100%;
+        }
+        .proceed-checkbox {
             width: 50%;
+            margin: 0 auto;
+        }
+        .proceed-count table {
+            float: none;
+            margin: 0 auto;
+            /* width: 100%; */
         }
         .proceed-payment {
-           float: right;
+            float: none;
+            width: 35%;
+            margin: 0 auto;
         }
         .proceed-count {
-            float: left;
+            float: none;
         }
         .table-cart {
             width: 95%;
+        }
+        .shipping_right {
+            float: none;
+        }
+        .payment-method {
+            text-align: center;
+            margin-top: 55px;
+        }
+        .input-text-inner textarea[placeholder] {
+            max-width: 240px;
+        }
+        .input-text-inner {
+          width: 0;
         }
         .menu_futer {
             width: 95%;
