--- a/css/style.css
+++ b/css/style.css
@@ -1987,7 +1987,7 @@ position: absolute;
     color: #555963;
 }
 .table-header td {
-    padding: 10px;
+    padding: 10px 0 0 23px;
 }
 .del-book {
     width: 1%;
