--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ body .scroll {
 }
 .shape8 {
     position: absolute;
-    top: 0px;
+    top: 0;
     left: 7px;
     background: url("../img/icons_svg/shape8.png");
     width: 4px;
@@ -318,7 +318,7 @@ a:focus {
 .category_slider {
     top: 55px;
     max-width: 150px;
-    padding: 0px 17px;
+    padding: 0 17px;
     text-align: center;
     margin-bottom: 5px;
     right: -10px;
@@ -849,7 +849,7 @@ h2 {
     color: #45474b;
 }
 .name-book a {
-    font-family: 'Ramaraja', serif
+    font-family: 'Ramaraja', serif;
     font-size: 19px;
     line-height: 21px;
     color: #45474b;
@@ -1364,7 +1364,7 @@ background-color: #f2fdff;;
     font-size: 16px;
     line-height: 32px;
     font-weight: 500;
-    padding-top: 0px;
+    padding-top: 0;
     float: right;
     background-color: #f2fdff;
     color: #555963;
@@ -2024,7 +2024,7 @@ position: absolute;
 .quantity-number input {
     border: none;
     background-color: #f5fdff;
-    width: 35px;
+    width: 20px;
     text-align: left;
     font-family: 'Yrsa', serif;
     font-size: 25px;
@@ -2333,7 +2333,7 @@ position: absolute;
     top: 20px;
     z-index: 8;
     height: 755px;
-    box-shadow: 0px 0px 10px #8F8C8D;
+    box-shadow: 0 0 10px #8F8C8D;
     width: 460px;
     position: absolute;
 }
@@ -2411,12 +2411,6 @@ div.cs-select {
     z-index: 100;
     width: 244px;
     margin-left: 10px;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    /*user-select: none; */
 }
 
 div.cs-select:focus {
