--- a/css/style.css
+++ b/css/style.css
@@ -217,9 +217,7 @@ body .scroll {
     -webkit-transition:-webkit-transform 0.075s linear;
 
 }
-/*.menu_list.open {*/
-    /*display: block;*/
-/*}*/
+
 .info_boks.active {
     display: block;
 }
@@ -227,16 +225,6 @@ body .scroll {
     display: block;
     transition: all 300ms;
 }
-/*#menu-all {*/
-    /*position: absolute;*/
-    /*width: 740px;*/
-    /*height: auto;*/
-    /*top: 100px;*/
-    /*left: 50px;*/
-    /*z-index: 10000;*/
-/*}*/
-
-
 .search {
     background-image: url("../img/icons_svg/search.svg");
     width: 23px;
@@ -499,16 +487,18 @@ a:focus {
      font-family: 'Yrsa', serif;
      font-size: 25px;
      color: #555963;
+    font-weight: 600;
  }
 .proceed-count-font3 {
     font-family: 'Ramaraja', serif;
     font-size: 28px;
     color: #555963;
 }
-.proceed-count-font4 {
+.proceed-count-font4 span {
     font-family: 'Yrsa', serif;
     font-size: 31px;
     color: #555963;
+    font-weight: 600;
 }
 .proceed-payment {
     text-align: right;
@@ -2024,7 +2014,7 @@ position: absolute;
 .quantity-number input {
     border: none;
     background-color: #f5fdff;
-    width: 20px;
+    width: 30px;
     text-align: left;
     font-family: 'Yrsa', serif;
     font-size: 25px;
