--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,1 +1,7 @@
 @import "mixins";
+@import "normalize.scss";
+@import "variables.scss";
+@import "mixins.scss";
+.book-author {
+  color: $link-color-orange;
+}
