--- a/css/responsive.css
+++ b/css/responsive.css
@@ -19,7 +19,6 @@
             float: left;
             background-color: white;
             padding: 10px 10px 5px 0;
-            /*border: 1px solid red;*/
             position: relative;
 
 
@@ -40,11 +39,9 @@
             padding-bottom: 10px;
         }
         .info_boks {
-            /*border: red solid 1px;*/
             display: block;
             position: relative;
             top: 0;
-            /*left: 137px;*/
             float: left;
             width: auto;
             background-color: white;
@@ -64,11 +61,9 @@
             display: block;
             background-color: white;
             top: 0;
-            /*left: 211px;*/
             margin: 0 auto;
             float: left;
             padding: 52px 25px 47px 0;
-            /* border: 1px solid red; */
             position: relative;
             font-family: 'Lato', sans-serif;
             font-size: 14px;
@@ -82,16 +77,13 @@
             display: block;
             margin-top: 15px;
         }
-        /*#menu-all {*/
-            /*display: none;*/
-        /*}*/
 
         #menu-all {
             position: absolute;
             top: 98px;
-            left: 0px;
+            left: 0;
             overflow: hidden;
-            width: 0px;
+            width: 0;
             transition: 0.5s;
             height: 231px;
         }
@@ -113,6 +105,14 @@
         /*======= article ============*/
 
     @media all and (max-width:767px) {
+        .article-right img {
+            /*margin-top: 50px;*/
+            width: 100%;
+            float: none;
+        }
+        .article-right {
+            float: none;
+        }
         #id-product {
             overflow: scroll;
         }
@@ -213,12 +213,7 @@
         .feature-image img {
             width: 100%;
         }
-        .inner-wrap-container {
-            /*max-width: 318px;*/
-            /*position: relative;*/
-            /*margin: 0 auto;*/
-            /*bottom: 6700px;*/
-        }
+
         #wrap-login {
             top: 50px;
             margin: 0 auto;
@@ -328,12 +323,10 @@
             height: auto !important;
         }
         .section_photo_autor {
-
             float: none;
         }
         .section_book_autor {
             position: relative;
-            /* padding: 10px 10px 10px 10px; */
             width: 100%;
             float: none;
         }
@@ -351,7 +344,6 @@
             margin: 0 auto;
             float: none;
             width: 100%;
-            /* min-width: 650px; */
         }
         .count-form-inner {
             width: 95%;
@@ -383,11 +375,9 @@
             padding-top: 35px;
         }
         .menu_futer ul li {
-            padding: 33px 10px 0px 0;
+            padding: 33px 10px 0 0;
         }
-        .menu_futer a {
-            font-size: 6px;
-        }
+
         .switch-blog {
             margin-top: 40px;
             margin-left: 0;
@@ -397,7 +387,10 @@
         }
         .menu_futer {
             width: 83%;
-            padding-bottom: 60px;
+            padding-bottom: 130px;
+        }
+        .related-author {
+            float: none;
         }
         .wrap-footer {
             /*height: 100%;*/
@@ -407,7 +400,6 @@
             margin: 0 0 30px 0;
         }
         .section_box p {
-            font-size: 11px;
             line-height: 17px;
         }
         .footer_section_box {
@@ -436,26 +428,25 @@
             float: left;
             width: 40%;
         }
-        .footer_info {
-            font-size: 6px;
-        }
         .footer-info-right {
             width: 60%;
             margin-top: 17px;
         }
         .single-post-header h1 {
-            font-size: 35px;
+            /*font-size: 35px;*/
             line-height: 40px;
             padding-top: 34px;
             padding-left: 10px;
         }
         .article-container {
+            display: inline-block;
             width: 90%;
         }
         .single-post-header {
             width: 97%;
         }
         .article-text {
+            /*display: inline-block;*/
             max-width: 90%;
         }
         .proceed-wrap {
@@ -473,18 +464,19 @@
             width: 90%;
         }
         .related-item img{
-            float: left;
+            float: none;
             width: auto;
-            padding: 0 25px 25px 0;
+            padding: 20px 25px 25px 0;
         }
         .related-item {
+            padding-left: 25px;
             margin: 0;
             width: 100%;
             display: inline-block;
         }
         .related-item a {
             float: left;
-            font-size: 16px;
+            /*font-size: 16px;*/
             line-height: 17px;
         }
         .post-users {
@@ -492,9 +484,10 @@
         }
         .relation-post {
             width: 100%;
-            padding-bottom: 0;
+            padding-bottom: 35px;
         }
         .post-comments {
+            padding-top: 90px;
             width: 100%;
         }
         .show-href {
@@ -505,46 +498,42 @@
         }
         .section_box {
             text-align: left;
-            width: 30%;
+            width: 100%;
         }
-        .article-name {
-            font-size: 15px;
-        }
+
         .article-name {
             padding-left: 10px;
-            font-size: 10px;
+            /*font-size: 10px;*/
         }
         .article-date:before{
-            height: 10px;
             vertical-align: middle;
+            margin: 0 11px 0 16px;
         }
-        .post-content p {
-            font-size: 15px;
-            line-height: 18px;
+        .margin-text {
+            margin-bottom: 45px;
         }
-        .post-content blockquote {
-            font-size: 17px;
-            line-height: 26px;
-        }
-        .post-content h2 {
-            font-size: 37px;
-            line-height: 49px;
-        }
-        .post-content h3 {
-            font-size: 25px;
-            line-height: 43px;
-        }
-        .text-about-story h4 {
-            font-size: 21px;
-            line-height: 48px;
-        }
-        .text-about-story li {
-            font-size: 21px;
-            line-height: 26px;
-            margin: 0 10px;
-        }
+        /*.post-content blockquote {*/
+            /*font-size: 17px;*/
+            /*line-height: 26px;*/
+        /*}*/
+        /*.post-content h2 {*/
+            /*font-size: 37px;*/
+            /*line-height: 49px;*/
+        /*}*/
+        /*.post-content h3 {*/
+            /*font-size: 25px;*/
+            /*line-height: 43px;*/
+        /*}*/
+        /*.text-about-story h4 {*/
+            /*font-size: 21px;*/
+            /*line-height: 48px;*/
+        /*}*/
+        /*.text-about-story li {*/
+            /*font-size: 21px;*/
+            /*line-height: 26px;*/
+            /*margin: 0 10px;*/
+        /*}*/
         .article-block h5 {
-            font-size: 14px;
             line-height: 18px;
         }
         .article-block {
@@ -566,14 +555,9 @@
             float: left;
             padding-right: 10px;
         }
-        /*.related-item {*/
-            /*width: 100%;*/
-            /*display: inline-block;*/
-        /*}*/
-
-
 
     }
+
     @media all and (min-width: 768px) and (max-width:991px) {
         #id-product {
             overflow: scroll;
@@ -845,7 +829,7 @@
         .related-item img{
             float: left;
             width: auto;
-            padding: 0 25px 25px 0;
+            padding: 0 25px 25px 28px;
         }
         .related-item {
             padding: 20px 0;
@@ -891,6 +875,7 @@
             float: none;
         }
         .article-right {
+            margin-top: 40px;
             width: 100%;
             float: none;
         }
