--- a/css/formcalc.css
+++ b/css/formcalc.css
@@ -2,7 +2,7 @@
 .check-room:not(checked) {
     opacity: 0;
 }
-.check-room:not(checked) + label {
+.style-room:not(checked) + label {
     display: block;
     text-align: center;
     width: 30px;
@@ -89,26 +89,12 @@
 
     border-radius: 10px;
 }
-.inner-rooms h3 {
+h3  {
     color: #774eb7;
     float: left;
     margin: 56px 0 0 0;
 }
-.inner-bathrooms h3 {
-    color: #774eb7;
-    float: left;
-    margin: 60px 0 0 0;
-}
-.calc-dirty h3 {
-    color: #774eb7;
-    float: left;
-    margin: 58px 0 0 0 ;
-}
-.calc-clean h3 {
-    color: #774eb7;
-    float: left;
-    margin: 58px 0 0 0;
-}
+
 .block-bed-label {
     float: left;
 }
@@ -149,3 +135,24 @@
     /*font-family: 'Lato', sans-serif;*/
     font-size: 15px;
 }
+
+/*.inner-rooms h3 {*/
+/*color: #774eb7;*/
+/*float: left;*/
+/*margin: 56px 0 0 0;*/
+/*}*/
+/*.inner-bathrooms h3 {*/
+/*color: #774eb7;*/
+/*float: left;*/
+/*margin: 60px 0 0 0;*/
+/*}*/
+/*.calc-dirty h3 {*/
+/*color: #774eb7;*/
+/*float: left;*/
+/*margin: 58px 0 0 0 ;*/
+/*}*/
+/*.calc-clean h3 {*/
+/*color: #774eb7;*/
+/*float: left;*/
+/*margin: 58px 0 0 0;*/
+/*}*/
