--- a/css/formcalc.css
+++ b/css/formcalc.css
@@ -1,21 +1,24 @@
 
 #block1 {
-    width: 25%;
+    padding: 0 30px 0 0;
+    width: 10%;
     display: inline-block;
     vertical-align: top;
 }
 #block1 h3 {
+    padding: 11px 0 0px 0;
     float: none;
 }
 #block2 {
-    width: 50%;
+    width: 52%;
     display: inline-block;
     vertical-align: top;
 }
 #block3 {
+    padding: 53px 0 0 40px;
     display: inline-block;
     vertical-align: top;
-    width: 25%;
+    width: 30%;
 }
 .check-room:not(checked) {
     opacity: 0;
@@ -27,10 +30,11 @@
     height: 30px;
     border-radius: 2px;
     border: 1px solid #774eb7;
-    padding: 10px 10px;
+    padding: 25px 25px;
     margin: 10px 10px;
     color: #774eb7;
     background-color: white;
+    font-size: 31px;
 }
 .check-room:checked + label {
     color: white;
@@ -51,8 +55,8 @@
     height: 30px;
     border-radius: 2px;
     border: 1px solid #774eb7;
-    padding: 10px 20px;
-    margin: 10px 11px;
+    padding: 10px 50px;
+    margin: 10px 10px;
     color: #774eb7;
     background-color: white;
 
@@ -71,8 +75,8 @@
     height: 30px;
     border-radius: 2px;
     border: 1px solid #774eb7;
-    padding: 10px 20px;
-    margin: 10px 11px;
+    padding: 10px 19px;
+    margin: 10px 10px;
     color: #774eb7;
     background-color: white;
 
@@ -83,15 +87,17 @@
 }
 
 .sbm-formcalc {
-    color: #774eb7;
+    background-color: #774eb7;
+    color: white;
+    border-radius: 30px;
     padding: 10px;
     font-family: 'Lato', sans-serif;
     font-size: 15px;
+    outline: none;
 }
 
 .block-bed {
     padding: 0 0 0 0;
-    /*border: 1px solid blueviolet;*/
     float: left;
 
     border-radius: 10px;
@@ -121,25 +127,26 @@ h3  {
 #time {
     color: red;
     width: 100%;
-    /*float: left;*/
 }
 .price-off {
+    padding: 24px 0 0 45px;
     color: #774eb7;
-    width: 100%;
-    /*float: left;*/
+    float: left;
 }
 #cost {
+    padding: 25px 0 25px 0;
+    font-size: 55px;
     color: red;
-    width: 100%;
-    /*float: left;*/
+    float: left;
 }
 .result-price h1 {
+    padding: 0 0 16px 0;
+    font-size: 36px;
     color: #774eb7;
     text-align: left;
 }
 #error-calc {
-    color: #982FDE;
+    color: red;
     /*font-family: 'Lato', sans-serif;*/
     font-size: 15px;
 }
-
