--- a/css/formcalc.css
+++ b/css/formcalc.css
@@ -15,7 +15,7 @@
     vertical-align: top;
 }
 #block3 {
-    padding: 53px 0 0 40px;
+    padding: 45px 0 0 40px;
     display: inline-block;
     vertical-align: top;
     width: 30%;
@@ -87,13 +87,18 @@
 }
 
 .sbm-formcalc {
+    margin: 50px 0 10px 0;
     background-color: #774eb7;
     color: white;
     border-radius: 30px;
-    padding: 10px;
-    font-family: 'Lato', sans-serif;
-    font-size: 15px;
+    padding: 10px 50px;
+    font-family: 'Yrsa', serif;
+    font-size: 25px;
     outline: none;
+}
+.sbm-formcalc:hover {
+    background-color: darkslateblue;
+    transition: background-color 2s ease-out;
 }
 
 .block-bed {
@@ -120,21 +125,41 @@ h3  {
     width: 80%;
     float: left;
 }
-/*.inner-result {*/
-    /*width: 20%;*/
-    /*float: right;*/
-/*}*/
+
 #time {
-    color: red;
-    width: 100%;
+    color: #555963;
+    font-size: 30px;
+    font-family: 'Yrsa', serif;
+    padding: 0 10px 0 0;
+    float: left;
+}
+.time-style {
+    font-size: 30px;
+    font-family: 'Yrsa', serif;
+    padding: 0 10px 0 0;
+    float: left;
+    color: #555963;
+}
+.time-min {
+    font-size: 20px;
+    font-family: 'Yrsa', serif;
+    padding: 0 10px 0 0;
+    float: left;
+    color: #555963;
 }
 .price-off {
-    padding: 24px 0 0 45px;
+    padding: 40px 0 0 45px;
     color: #774eb7;
     float: left;
 }
 #cost {
-    padding: 25px 0 25px 0;
+    padding: 40px 0 25px 0;
+    font-size: 55px;
+    color: red;
+    float: left;
+}
+.cost-money {
+    padding: 40px 10px 25px 0;
     font-size: 55px;
     color: red;
     float: left;
@@ -142,7 +167,7 @@ h3  {
 .result-price h1 {
     padding: 0 0 16px 0;
     font-size: 36px;
-    color: #774eb7;
+    color: #555963;
     text-align: left;
 }
 #error-calc {
