--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,11 +1,11 @@
-//@import "mixins";
-//@import "normalize.scss";
-//@import "variables.scss";
-//@import "mixins.scss";
-//.book-author {
-//  color: $link-color-orange;
-//}
-//
-//body {
-//  background-color:white;
-//}
+@import "mixins";
+@import "normalize.scss";
+@import "variables.scss";
+@import "mixins.scss";
+.book-author {
+  color: $link-color-orange;
+}
+
+body {
+  background-color:white;
+}
