--- a/css/responsive.css
+++ b/css/responsive.css
@@ -28,7 +28,8 @@
             display: inline-block;
             width: 30px;
             height: 30px;
-            position: relative;
+            position: absolute;
+            right: 0;
             top: 38px;
             padding-right: 15px;
         }
